--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+	<link href="https://bootswatch.com/5/cyborg/bootstrap.css" rel="stylesheet">
         {% block body %}{% endblock %}
     </body>
 </html>
